--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "vite": "^7.0.7"
     },
     "dependencies": {
+        "@alpinejs/persist": "^3.15.3",
         "@oddbird/css-anchor-positioning": "^0.8.0"
     }
 }
